--- a/.conform.yaml
+++ b/.conform.yaml
@@ -17,7 +17,15 @@ policies:
       maximumOfOneCommit: false
       conventional:
         types:
-          - "type"
+          - fix
+          - feat
+          - build
+          - ci
+          - docs
+          - style
+          - refactor
+          - perf
+          - test
         scopes:
           - "scope"
         descriptionLength: 72
