--- a/.github/workflows/conform.yml
+++ b/.github/workflows/conform.yml
@@ -7,4 +7,4 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
     - name: Conform Action
-      uses: docker://autonomy/conform:latest
+      uses: docker://autonomy/conform:v0.1.0-alpha.19
