--- a/.github/workflows/conform.yml
+++ b/.github/workflows/conform.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
+      with: { fetch-depth: 0 }
     - name: Conform Action
       uses: docker://autonomy/conform:v0.1.0-alpha.19-6-gcea1ee9
