feat(opsem): add sea.assert.if(ante, conseq) intrinsic to Bv2
Also added tests which call the user facing version __VERIFIER_ASSERT_IF

Note the changes to map verifier.assert to sea.assert.if will be in the next PR for easier review.

--- a/test/opsem/lit.cfg
+++ b/test/opsem/lit.cfg
@@ -40,6 +40,9 @@ def isexec (fpath):
 def which (cmd):
    return lit.util.which(cmd, config.environment['PATH'])
 
+def getSea():
+   return which('sea')
+
 def getSeaHorn ():
    return which('seahorn')
 
@@ -48,6 +51,10 @@ addEnv('PWD')
 addEnv('C_INCLUDE_PATH')
 
 lit_config.note('Repository root is {}'.format(repositoryRoot))
+
+sea_cmd = getSea()
+if not isexec(sea_cmd):
+   lit_config.fatal('Could not find the Sea executable')
 
 seahorn_cmd = getSeaHorn()
 if not isexec(seahorn_cmd):
@@ -61,6 +68,10 @@ seabmc = [seahorn_cmd, '--horn-bmc-engine=mono',
 seasmt = [seahorn_cmd, '--horn-bmc-engine=mono',   
           '--horn-bmc', '--horn-bv2=true', '--log=opsem',
           '--keep-shadows=true' ]
+sea = [sea_cmd, 'bpf', '--horn-bmc-engine=mono',
+       '--horn-bmc', '--horn-bv2=true', '--log=opsem',
+       '--keep-shadows=true']
 config.substitutions.append(('%seabmc', ' '.join(seabmc)))
 config.substitutions.append(('%seasmt', ' '.join(seasmt)))
+config.substitutions.append(('%sea', ' '.join(sea)))
 config.substitutions.append(('%oc', 'OutputCheck --comment=\;'))
